1.22 2024-06-12
~~~~~~~~~~~~~~~

* Updates to product ingestions:
  - EARLINET: fixed memory issue when reading extinction data.
  - EarthCARE: updates for new V11.2 format definition baseline
  - GEOMS UVVIS.DOBSON: fixed issue with reading of int16 typed data.
  - S5P PAL L2 SO2 COBRA: fixed cloud_fraction option behaviour and added
    alternative qa value calculation for processor V02.00.00.

1.21 2024-03-15
~~~~~~~~~~~~~~~

* Fixed incorrect weight division for random uncertainties in spatial binning.

* Added check for unit equality when appending variables.

* Fixed CMake build for locating Python 3.12.

* Updates to product ingestions:
  - EarthCARE: updates for new V11 format definition baseline
  - ECMWF GRIB: added general support for new masterTablesVersion numbers
  - S5P L2 CH4: added support for nir aerosol/cloud/surface property ingestion.
  - S5P L2 CLOUD: added support for nir-band spatial grid data
  - S5P PAL L2: added support for OClO
  - S5P PAL L2 AOT: added support for V02.00.00 output format
  - S5P PAL L2 BRO: fixed memory issue with reading total column and
    uncertainty variables
  - S5P PAL L2 TCWV: fixed wrong quantity for density variables

1.20.2 2023-11-13
~~~~~~~~~~~~~~~~~

* Fill values of floating point types are now explicitly set to NaN when
  exporting to a netcdf or hdf5 file.

* Updates to product ingestions:
  - EARLINET: fixed issue where no backscatter/extinction data was ingested.

1.20.1 2023-10-12
~~~~~~~~~~~~~~~~~

* Updates to product ingestions:
  - IASI L1C: added missing angle variables
  - S5P PAL L2 AER_OT: added missing wavelength variable
  - S5P PAL L2 CHOCHO: fixed missing units for number density variables

1.20 2023-09-19
~~~~~~~~~~~~~~~

* Updates to product ingestions:
  - GEOMS FTIR: added support for C2H3NO5/PAN and C2H4, added support for
    template V3.
  - GEOMS TCCON: added support for template V6.
  - S5P L2 ALH: added support for revised surface_albedo variable and added