@@ -353,72 +353,81 @@
 <td><p><em>path</em></p></td>
 <td><p><strong>/PRODUCT/SUPPORT_DATA/GEOLOCATIONS/viewing_azimuth_angle[]</strong></p></td>
 </tr>
-<tr class="row-even"><td><p><strong>cloud_fraction</strong></p></td>
+<tr class="row-even"><td rowspan="4"><p><strong>cloud_fraction</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/PRODUCT/SUPPORT_DATA/INPUT_DATA/cloud_fraction</strong></p></td>
 </tr>
-<tr class="row-odd"><td><p><strong>surface_pressure</strong></p></td>
+<tr class="row-odd"><td><p><em>description</em></p></td>
+<td><p>if AOT product was generated with VIIRS input data</p></td>
+</tr>
+<tr class="row-even"><td><p><em>path</em></p></td>
+<td><p><strong>/PRODUCT/SUPPORT_DATA/INPUT_DATA/effective_cloud_fraction</strong></p></td>
+</tr>
+<tr class="row-odd"><td><p><em>description</em></p></td>
+<td><p>if AOT product was not generated with VIIRS input data</p></td>
+</tr>
+<tr class="row-even"><td><p><strong>surface_pressure</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/PRODUCT/SUPPORT_DATA/INPUT_DATA/surface_pressure[]</strong></p></td>
 </tr>
-<tr class="row-even"><td rowspan="2"><p><strong>snow_ice_type</strong></p></td>
+<tr class="row-odd"><td rowspan="2"><p><strong>snow_ice_type</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/PRODUCT/SUPPORT_DATA/INPUT_DATA/snow_ice_flag[]</strong></p></td>
 </tr>
-<tr class="row-odd"><td><p><em>description</em></p></td>
+<tr class="row-even"><td><p><em>description</em></p></td>
 <td><p>0: snow_free_land (0), 1-100: sea_ice (1), 101: permanent_ice (2), 103: snow (3), 255: ocean (4), other values map to -1</p></td>
 </tr>
-<tr class="row-even"><td rowspan="2"><p><strong>sea_ice_fraction</strong></p></td>
+<tr class="row-odd"><td rowspan="2"><p><strong>sea_ice_fraction</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/PRODUCT/SUPPORT_DATA/INPUT_DATA/snow_ice_flag[]</strong></p></td>
 </tr>
-<tr class="row-odd"><td><p><em>description</em></p></td>
+<tr class="row-even"><td><p><em>description</em></p></td>
 <td><p>if 1 &lt;= snow_ice_flag &lt;= 100 then snow_ice_flag/100.0 else 0.0</p></td>
 </tr>
-<tr class="row-even"><td><p><strong>absorbing_aerosol_index</strong></p></td>
+<tr class="row-odd"><td><p><strong>absorbing_aerosol_index</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/PRODUCT/SUPPORT_DATA/INPUT_DATA/absorbing_aerosol_index[]</strong></p></td>
 </tr>
-<tr class="row-odd"><td><p><strong>wind_speed</strong></p></td>
+<tr class="row-even"><td><p><strong>wind_speed</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/PRODUCT/SUPPORT_DATA/INPUT_DATA/wind_speed[]</strong></p></td>
 </tr>
-<tr class="row-even"><td><p><strong>aerosol_optical_depth</strong></p></td>
+<tr class="row-odd"><td><p><strong>aerosol_optical_depth</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/PRODUCT/aerosol_optical_thickness</strong></p></td>
 </tr>
-<tr class="row-odd"><td rowspan="3"><p><strong>aerosol_optical_depth_uncertainty</strong></p></td>
+<tr class="row-even"><td rowspan="3"><p><strong>aerosol_optical_depth_uncertainty</strong></p></td>
 <td><p><em>available</em></p></td>
 <td><p>optional</p></td>
-</tr>
-<tr class="row-even"><td><p><em>condition</em></p></td>
-<td><p>processor version &gt;= 02.00.00</p></td>
-</tr>
-<tr class="row-odd"><td><p><em>path</em></p></td>
-<td><p><strong>/PRODUCT/aerosol_optical_thickness_precision</strong></p></td>
-</tr>
-<tr class="row-even"><td><p><strong>aerosol_optical_depth_validity</strong></p></td>
-<td><p><em>path</em></p></td>
-<td><p><strong>/PRODUCT/qa_value</strong></p></td>
-</tr>
-<tr class="row-odd"><td rowspan="4"><p><strong>single_scattering_albedo</strong></p></td>
-<td><p><em>condition</em></p></td>
-<td><p>processor version &lt; 02.00.00</p></td>
-</tr>
-<tr class="row-even"><td><p><em>path</em></p></td>
-<td><p><strong>/PRODUCT/single_scattering_albedo</strong></p></td>
 </tr>
 <tr class="row-odd"><td><p><em>condition</em></p></td>
 <td><p>processor version &gt;= 02.00.00</p></td>
 </tr>
 <tr class="row-even"><td><p><em>path</em></p></td>
+<td><p><strong>/PRODUCT/aerosol_optical_thickness_precision</strong></p></td>
+</tr>
+<tr class="row-odd"><td><p><strong>aerosol_optical_depth_validity</strong></p></td>
+<td><p><em>path</em></p></td>
+<td><p><strong>/PRODUCT/qa_value</strong></p></td>
+</tr>
+<tr class="row-even"><td rowspan="4"><p><strong>single_scattering_albedo</strong></p></td>
+<td><p><em>condition</em></p></td>
+<td><p>processor version &lt; 02.00.00</p></td>
+</tr>
+<tr class="row-odd"><td><p><em>path</em></p></td>
+<td><p><strong>/PRODUCT/single_scattering_albedo</strong></p></td>
+</tr>
+<tr class="row-even"><td><p><em>condition</em></p></td>
+<td><p>processor version &gt;= 02.00.00</p></td>
+</tr>
+<tr class="row-odd"><td><p><em>path</em></p></td>
 <td><p><strong>/PRODUCT/SUPPORT_DATA/DETAILED_RESULTS/single_scattering_albedo</strong></p></td>
 </tr>
-<tr class="row-odd"><td><p><strong>aerosol_type</strong></p></td>
+<tr class="row-even"><td><p><strong>aerosol_type</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/PRODUCT/aerosol_type</strong></p></td>
 </tr>
-<tr class="row-even"><td><p><strong>wavelength</strong></p></td>
+<tr class="row-odd"><td><p><strong>wavelength</strong></p></td>
 <td><p><em>path</em></p></td>
 <td><p><strong>/PRODUCT/wavelength</strong></p></td>
 </tr>
